--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,9 +1,13 @@
 @import "normalize.css";
-@import "base/_global.css";
-@import "base/_variables.css";
+@import "base/_global";
+@import "base/_variables";
+@import "base/_mixins.css";
 @import "modules/_grand-canyon";
-@import "modules/_btn.css";
-
+@import "modules/_btn";
+@import "modules/_wrapper";
+@import "modules/_page-section";
+@import "modules/_headline";
+@import "modules/_row";
 
 
 
