--- a/assets/styles/modules/_page-section.css
+++ b/assets/styles/modules/_page-section.css
@@ -1,7 +1,31 @@
 .page-section {
-  padding: 1.8rem 0;
+  padding: 1.2rem 0;
   
-	@mixin atSmall {
-		padding: 3.5rem 0;
+	@mixin atMedium {
+		padding: 4.5rem 0;
+	}
+
+	&--no-b-padding-until-medium {
+		padding-bottom: 0;
+
+		@mixin atMedium {
+			padding-bottom: 4.5rem;
+		}
+	}
+
+	&--blue {
+		background-color: $mainBlue;
+		color: #FFF;
+	}
+
+	&--heroes {
+		background-color: #e0e6ef;
+
+		@mixin atMedium {
+			background: url('/assets/images/pavel-canyon.jpg') top center no-repeat;
+		    background-size: cover;
+
+		}
+		
 	}
 }
