--- a/assets/styles/modules/_row.css
+++ b/assets/styles/modules/_row.css
@@ -2,16 +2,45 @@
 
 	@mixin clearfix;
 
+	&--t-padding {
+		padding-top: 80px;
+	}
+
 	&--gutters {
 		margin-right: -65px;
 	}
 
+	&--gutters-large {
+		margin-right: -100px;
+	}
+
+	&--gutters-small {
+		margin-right: -45px;
+	}
+
 	&--gutters > div {
 		padding-right: 65px;
-		box-sizing: border-box;
+		
+	}
+
+	&--gutters-large > div {
+		padding-right: 100px;
+	}
+
+	&--gutters-small > div {
+		padding-right: 45px;
+	}
+
+	&__b-margin-until-medium {
+		margin-bottom: 1rem;
 	}
 
 	@mixin atMedium {
+		&__b-margin-until-medium {
+			margin-bottom: 0;
+		}
+
+
 		&__photo-medium {
 		float: left;
 		width: 45%
@@ -22,5 +51,28 @@
 		width: 55%
 	}
 
+	&__medium-4 {
+      float: left;
+      width: 33.33%;
+    }
+
+	&__medium-6 {
+		float: left;
+		width: 50%;
+	 }
+
 	}	
+
+	/*Begin Equal Height Rules */
+
+	&--equal-height-at-medium {
+		@mixin atMedium {
+			display: flex;
+		}
+
+		& > div {
+			float: none;
+			display: flex;
+		}
+	}
 }
