--- a/assets/styles/modules/_wrapper.css
+++ b/assets/styles/modules/_wrapper.css
@@ -1,19 +1,36 @@
 .wrapper {
-	overflow: hidden;
-	padding-left: 18px;
-	padding-right: 18px;
-	max-width: 1200px;
-	margin-right: auto;
-	margin-left: auto;
+  overflow: hidden;
+  padding-left: 18px;
+  padding-right: 18px;
+  max-width: 1236px;
+  margin-left: auto;
+  margin-right: auto;
 
-	&--medium {
-		max-width: 976px;
-		margin-left: auto;
-		margin-right: auto;
-	}
+  &--medium {
+    max-width: 976px;
+  }
 
-	.wrapper {
-		padding-left: 0;
-		padding-right: 0;
-	}
+  &--no-padding-until-medium {
+    padding-left: 0;
+    padding-right: 0;
+
+    @mixin atMedium {
+      padding-left: 18px;
+      padding-right: 18px;
+    }
+  }
+
+  .wrapper {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  &--b-margin {
+    margin-bottom: 1rem;
+
+    @mixin atSmall {
+      margin-bottom: 2.875rem;
+    }
+  }
+
 }
