--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,13 +1,17 @@
 @import "normalize.css";
-@import "base/_global";
 @import "base/_variables";
 @import "base/_mixins.css";
+@import "base/_global";
 @import "modules/_grand-canyon";
 @import "modules/_btn";
 @import "modules/_wrapper";
 @import "modules/_page-section";
 @import "modules/_headline";
 @import "modules/_row";
+@import "modules/_generic-container";
+@import "modules/_section-title";
+@import "modules/_information-item";
+@import "modules/_heroes";
 
 
 
