--- a/assets/styles/modules/_page-section.css
+++ b/assets/styles/modules/_page-section.css
@@ -20,10 +20,12 @@
 
 	&--heroes {
 		background-color: #e0e6ef;
+		margin-bottom: -36px;
 
 		@mixin atMedium {
 			background: url('/assets/images/pavel-canyon.jpg') top center no-repeat;
 		    background-size: cover;
+		    margin-bottom: -72px;
 
 		}
 		
