--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -12,6 +12,9 @@
 @import "modules/_section-title";
 @import "modules/_information-item";
 @import "modules/_heroes";
+@import "modules/_site-footer";
+@import "modules/_site-header";
+@import "modules/_primary-nav";
 
 
 
