--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -2,7 +2,9 @@
 
 
   &--pull-right {
-    float: right;
+    @mixin atMedium {
+      float: right;
+    }
   }
 
   ul {
@@ -12,9 +14,23 @@
   }
 
   li {
+    font-size: 1.5rem;
     list-style: none;
-    float: left;
-    padding-right: 20px;
+    display: inline-block;
+    padding-right: 7px;
+    margin-top: .5rem;
+    @mixin atMedium {
+      padding-right: 20px;
+      float: left;
+      display: block;
+    }
+  }
+
+  li: last-child {
+    padding-right: 0;
+    @mixin atMedium {
+      padding-right: 20px;
+    }
   }
 
   a {
@@ -22,6 +38,14 @@
     font-weight: 300;
     text-decoration: none;
     display: block;
-    padding: 12px 0;
+    padding: 5px 8px;
+    font-size: .8rem;
+    background-color: rgba(47, 85, 114, .7);
+
+    @mixin atMedium {
+      font-size: 1rem;
+      padding: 12px 0;
+      background-color: transparent;
+    }
   }
 }
