--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -19,6 +19,11 @@
     color: $mainBlue
   }
 
+  &--less-margin {
+    margin-bottom: 1.1rem;
+    margin-top: 0;
+  }
+
   &__icon {
     display: block;
     margin-left: auto;
